--- a/estilo/style.css
+++ b/estilo/style.css
@@ -68,6 +68,7 @@ body{
       padding-left: 10px;
       border-radius: 5px;
       margin: auto;
+      padding-bottom: 50px;
       text-shadow: 2px 2px 0px rgba(0, 0, 0, 0.89);
     }
 
